hero section video embeded

--- a/src/app/components/hero-banner/hero-banner.component.html
+++ b/src/app/components/hero-banner/hero-banner.component.html
@@ -1,7 +1,12 @@
-<section class="relative h-[600px] mt-20 overflow-hidden"  style="background-image: url('/assets/images/hero_section_bg.gif');background-repeat: no-repeat;background-size: cover;">
+<section class="relative h-[600px] mt-20 overflow-hidden">
+    <video #heroVideo autoplay loop muted playsinline [muted]="true" oncanplay="this.play()"
+        onloadedmetadata="this.muted = true"
+        class="absolute inset-0 w-full h-full object-cover object-[30%] md:object-center">
+        <source src="/assets/images/acu_hero_final_2.mp4" type="video/mp4">
+    </video>
 
-    
-    <div class="absolute inset-0 bg-black bg-opacity-70"></div>
+
+    <div class="absolute inset-0 bg-black bg-opacity-30"></div>
     <div class="swiper-container h-full">
         <!-- Carousel implementation will go here -->
         <div class="relative h-full">
