--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<main>
+<main class="animate-fade-in">
     <app-hero-banner></app-hero-banner>
     <app-featured-collections></app-featured-collections>
     <app-trending-products></app-trending-products>
