--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -49,6 +49,11 @@
         </div>
         <div class="border-t border-gray-700 pt-8 text-center text-sm">
             <p> Ahiru's Creative Universe. All rights reserved.</p>
+            <div class="recaptcha-legal-text">
+                This site is protected by reCAPTCHA and the Google
+                <a href="https://policies.google.com/privacy" target="_blank">Privacy Policy</a> and
+                <a href="https://policies.google.com/terms" target="_blank">Terms of Service</a> apply.
+            </div>
         </div>
     </div>
 </footer>
